SigmaCodebackup3rdSep/objects/Vendor_Rating_System__mdt.object
<CustomObject>
    <fields>
        <fullName>Delivery_Rating__c</fullName>
        <label>Delivery Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Rating__c</fullName>
        <label>Price Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Rating__c</fullName>
        <label>Quality Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Rating__c</fullName>
        <label>Response Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Vendor Rating System</label>
    <pluralLabel>Vendor Rating Systems</pluralLabel>
</CustomObject>